kubernetes/apps/docker-registry/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: docker-registry
  labels:
    pod-security.kubernetes.io/enforce: privileged
