kubernetes/apps/docker-registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-registry-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: registry.70ld.home
      http:
        paths:
          - path: /v2/_catalog
            pathType: Prefix
            backend:
              service:
                name: docker-registry-svc
                port:
                  number: 5000
